updated the ratings/me and reviews/me to use the already existing get handlers in tv.proxy.ts and movie.proxy.ts for consistency. also removed redundant "userId" fields in the responses for ratings/reviews since the author model covers that
